--- a/scss/utilities/_text.scss
+++ b/scss/utilities/_text.scss
@@ -49,7 +49,11 @@
 }
 
 .text-body { color: $body-color !important; }
-.text-muted { color: $text-muted !important; }
+.text-muted {
+  @include themes($typography-theme-map, $create: parent) {
+    color: themes-get-value("text-muted") !important;
+  }
+}
 
 .text-black-50 { color: rgba($black, .5) !important; }
 .text-white-50 { color: rgba($white, .5) !important; }
