--- a/scss/variables/_options.scss
+++ b/scss/variables/_options.scss
@@ -23,6 +23,7 @@ $enable-deprecation-messages:                false !default;
 $enable-sidebar-nav-rounded:                 false !default;
 $layout-transition-speed:                    .3s !default;
 $enable-elevations:                          true !default;
+$enable-prefers-color-scheme:                false !default;
 
 $options: () !default;
 
