--- a/scss/variables/_typography.scss
+++ b/scss/variables/_typography.scss
@@ -89,3 +89,15 @@ $icon-size-base:  1rem !default;
 $icon-size-sm:    $icon-size-base * .875 !default;
 $icon-size-lg:    $icon-size-base * 1.25 !default;
 $icon-size-xl:    $icon-size-base * 1.5 !default;
+
+
+$typography-theme-map: () !default;
+// stylelint-disable-next-line scss/dollar-variable-default
+$typography-theme-map: map-merge(
+  (
+    default: (
+      "text-muted":  $text-muted
+    )
+  ),
+  $typography-theme-map
+);
