--- a/scss/themes/dark/variables/_options.scss
+++ b/scss/themes/dark/variables/_options.scss
@@ -1,6 +1,6 @@
 
 // Options
-$enable-elevations__dt:  false !default;
+$enable-elevations__dt:  true !default;
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $options: map-merge(
