--- a/scss/themes/dark/variables/components/_header.scss
+++ b/scss/themes/dark/variables/components/_header.scss
@@ -3,7 +3,7 @@
 // Dark theme
 
 // scss-docs-start header-dark-theme
-$header-bg__dt:                     $gray-400__dt !default;
+$header-bg__dt:                     $bg-elevation-3 !default;
 $header-color__dt:                  rgba($white, .75) !default;
 $header-border__dt:                 ( bottom: 0 ) !default;
 $header-hover-color__dt:            rgba($white, .9) !default;
