--- a/scss/themes/dark/variables/components/_modals.scss
+++ b/scss/themes/dark/variables/components/_modals.scss
@@ -3,10 +3,10 @@
 // Dark theme
 // scss-docs-start modal-dark-theme
 $modal-content-color__dt:         null !default;
-$modal-content-bg__dt:            $gray-400__dt !default;
-$modal-content-border-color__dt:  $gray-400__dt !default;
-$modal-header-border-color__dt:   $gray-400__dt !default;
-$modal-footer-border-color__dt:   $gray-400__dt !default;
+$modal-content-bg__dt:            $bg-elevation-24 !default;
+$modal-content-border-color__dt:  rgba(0, 0, 0, .2) !default;
+$modal-header-border-color__dt:   rgba(0, 0, 0, .2) !default;
+$modal-footer-border-color__dt:   rgba(0, 0, 0, .2) !default;
 // scss-docs-end modal-dark-theme
 
 // stylelint-disable-next-line scss/dollar-variable-default
