--- a/scss/themes/dark/variables/components/_subheader.scss
+++ b/scss/themes/dark/variables/components/_subheader.scss
@@ -2,7 +2,7 @@
 
 // Dark theme
 // scss-docs-start subheader-dark-themes
-$subheader-bg__dt:                     $gray-400__dt !default;
+$subheader-bg__dt:                     $bg-elevation-3 !default;
 $subheader-color__dt:                  rgba($white, .75) !default;
 $subheader-border__dt:                 ( bottom: 0 ) !default;
 $subheader-hover-color__dt:            rgba($white, .9) !default;
