--- a/scss/themes/dark/_variables.scss
+++ b/scss/themes/dark/_variables.scss
@@ -34,6 +34,7 @@
 @import "variables/components/list-group";
 @import "variables/components/breadcrumb";
 @import "variables/components/toasts";
+@import "variables/components/typography";
 @import "variables/components/close";
 
 // Apps
