--- a/scss/themes/dark/variables/components/_dropdowns.scss
+++ b/scss/themes/dark/variables/components/_dropdowns.scss
@@ -6,12 +6,12 @@
 // Dark theme
 // scss-docs-start dropdowns-dark-theme
 $dropdown-color__dt:                $body-color__dt !default;
-$dropdown-bg__dt:                   $gray-200__dt !default;
+$dropdown-bg__dt:                   $bg-elevation-8 !default;
 $dropdown-border-color__dt:         $border-color__dt !default;
 $dropdown-divider-bg__dt:           $border-color__dt !default;
 $dropdown-link-color__dt:           $body-color__dt !default;
 $dropdown-link-hover-color__dt:     $body-color__dt !default;
-$dropdown-link-hover-bg__dt:        rgba($white, .1) !default;
+$dropdown-link-hover-bg__dt:        $bg-elevation-16 !default;
 $dropdown-link-active-color__dt:    $component-active-color__dt !default;
 $dropdown-link-active-bg__dt:       $component-active-bg__dt !default;
 $dropdown-link-disabled-color__dt:  rgba($body-color__dt, .6) !default;
