--- a/scss/themes/dark/variables/components/_shared.scss
+++ b/scss/themes/dark/variables/components/_shared.scss
@@ -4,7 +4,7 @@
 //
 // Define common padding and border radius sizes and more.
 
-$border-color__dt: $gray-900__dt !default;
+$border-color__dt: rgba(255, 255, 255, .075) !default;
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $border-theme-map: map-merge(
