refactor: improve elevation system

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -7,5 +7,6 @@
     background-color: themes-get-value("body-bg");
 
     --color: #{themes-get-value("body-color")};
+    --elevation-base-color: #{themes-get-value("elevation-base-color")};
   }
 }
