refactor: rename c-select to c-multi-select

--- a/scss/coreui.scss
+++ b/scss/coreui.scss
@@ -6,7 +6,7 @@
  * License (https://coreui.io/pro/license/)
  */
 
- // scss-docs-start import-stack
+// scss-docs-start import-stack
 @import "functions";
 @import "variables";
 @import "themes";
@@ -64,7 +64,7 @@
 
 // PRO Components
 @import "loading-button";
-@import "select";
+@import "multi-select";
 
 // Layout Options
 @import "layouts";
