--- a/scss/utilities/_elevation.scss
+++ b/scss/utilities/_elevation.scss
@@ -1,6 +1,6 @@
 @each $level, $value in $elevations {
   .c-elevation-#{$level} {
     border: 0;
-    box-shadow: unquote($value);
+    box-shadow: unquote($value) !important; // stylelint-disable-line declaration-no-important
   }
 }
