--- a/scss/themes/dark/variables/components/_buttons-forms.scss
+++ b/scss/themes/dark/variables/components/_buttons-forms.scss
@@ -15,6 +15,7 @@ $input-plaintext-color__dt:           $body-color__dt !default;
 $input-group-addon-color__dt:         $body-color__dt !default;
 $input-group-addon-bg__dt:            rgba($white, .09) !default;
 $input-group-addon-border-color__dt:  rgba($white, .09) !default;
+$select-option-bg__dt:                $bg-elevation-8 !default;
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $form-theme-map: map-merge(
@@ -33,6 +34,7 @@ $form-theme-map: map-merge(
       "input-group-addon-color":         $input-group-addon-color__dt,
       "input-group-addon-bg":            $input-group-addon-bg__dt,
       "input-group-addon-border-color":  $input-group-addon-border-color__dt,
+      "select-option-bg":                $select-option-bg__dt
     )
   )
 );
